src/objects/Fruit__c.object
<CustomObject>
    <fields>
        <fullName>Buy_Price__c</fullName>
        <label>Buy Price</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fruit_Stand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fruit Stand</label>
        <referenceTo>Fruit_Stand__c</referenceTo>
        <relationshipLabel>Fruits</relationshipLabel>
        <relationshipName>Fruits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gain_Loss__c</fullName>
        <formula>Sell_Price__c -  Buy_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gain/Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sell_Price__c</fullName>
        <label>Sell Price</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <picklist>
            <picklistValues>
                <fullName>Apples</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oranges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grapes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Watermelons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strawberries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bananas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiwis</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Fruit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Inv# {00000000}</displayFormat>
        <label>Fruit#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fruits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>